# cfb

./: .gitignore  CMakeLists.txt
include/: application.h  logging.h  model.h  parsing.h  strutil.h
include/temp/: equilibrium.h  error.h  model.h  utils.h
share/: FFCM-2.yaml  input.txt
src/: application.cpp  counterflow_burner.cpp  equilibrium.cpp  logging.cpp  main.cpp  model.cpp  parsing.cpp  struil.cpp
src/temp/: static_flame.cpp
